--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "memory-cache": "^0.2.0",
     "morgan": "~1.9.1",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "samlp": "^6.0.2"
   }
 }
