--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "http-errors": "~1.6.3",
     "memory-cache": "^0.2.0",
     "morgan": "~1.9.1",
-    "node-fetch": "^3.1.0",
-    "samlp": "^6.0.2"
+    "samlp": "^6.0.2",
+    "undici": "^4.12.1"
   }
 }
