--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,11 @@ $RECYCLE.BIN/
 
 yarn.lock
 *.pem
+
+.vscode
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
