--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "morgan": "~1.9.1",
     "samlp": "^6.0.2",
     "undici": "^4.12.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
