--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "traversal": "ding ngrok --subdomain ${your_subdomain} --port 3000",
+    "traversal": "ding ngrok --subdomain c7 --port 3000",
     "start": "node ./bin/www",
     "build": "ncc build -m ./bin/www -o docker"
   },
@@ -17,7 +17,7 @@
     "memory-cache": "^0.2.0",
     "morgan": "~1.9.1",
     "samlp": "^6.0.2",
-    "undici": "^4.12.1"
+    "undici": "^5.5.1"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.33.3",
