--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "traversal": "ding ngrok --subdomain c7 --port 3000",
+    "traversal": "ding ngrok --subdomain ${your_subdomain} --port 3000",
     "start": "node ./bin/www",
     "build": "ncc build -m ./bin/www -o docker"
   },
